update strategy to have reset feature & update example app

--- a/examples/login/views/login.ejs
+++ b/examples/login/views/login.ejs
@@ -1,17 +1,19 @@
-<a href="/auth/cloudfoundry">Login with CloudFoundry</a>
-
+<br>
+<b>
+    <a href="/auth/cloudfoundry">Login with Cloud Foundry</a>
+</b>
 <br>
 <br>
 <b>Registering your app to perform OAuth against cloudfoundry.com's UAA:</b>
 <OL>
-<li>Please register your app at Cloud Foundry at: <a href="http://support.cloudfoundry.com/">http://support.cloudfoundry.com/</a></li>
-<li>Provide your app name. e.g. MyCoolApp</li>
-<li>Provide a app's server domain for callback. e.g. mycoolapp.cloudfoundry.com</li>
+    <li>Please register your app at Cloud Foundry at: <a href="http://support.cloudfoundry.com/">http://support.cloudfoundry.com/</a></li>
+    <li>Provide your app name. e.g. MyCoolApp</li>
+    <li>Provide a app's server domain for callback. e.g. mycoolapp.cloudfoundry.com</li>
 </OL>
 <br>
 <b>Configure this app:</b>
 <OL>
-    <li> Set ClientID and ClientSecret that you get from Cloud Foundry in app.js</li>
+    <li> Set clientID, clientSecret & callback url that you get from Cloud Foundry in app.js</li>
     <li> Run this example at the callback server(e.g.: mycoolapp.cloudfoundry.com) that you provided during registration.
     </li>
 </OL>
