--- a/examples/login/views/index.ejs
+++ b/examples/login/views/index.ejs
@@ -1,5 +1,5 @@
 <% if (!user) { %>
 	<h2>Welcome! Please log in.</h2>
 <% } else { %>
-	<h2>Hello, <%= user.user %>.</h2>
+	<h2>Hello, <%= user.user %></h2>
 <% } %>
